WIP: Use List.getFirst()/getLast()
Take advantage of sequenced collections, improving our code a bit.

Change-Id: I8ab1c0dd9227da58c67f6b8205a82ca902f5791f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>